# Parallels

task1/: 1task.cpp  CMakeLists.txt  README.md
